--- a/vercel.json
+++ b/vercel.json
@@ -4,11 +4,16 @@
     "functions": {
         "api/index.php": { "runtime": "vercel-php@0.6.0" }
     },
-    "routes": [{
-        "src": "/(.*)",
-        "dest": "/api/index.php"
-    }],
-    
+    "routes": [
+        {
+            "src": "/assets/(.*)",
+            "dest": "/public/build/assets/"
+        },
+        {
+            "src": "/(.*)",
+            "dest": "/api/index.php"
+        }
+        ],
     "env": {
         "APP_ENV": "production",
         "APP_DEBUG": "true",
