--- a/vercel.json
+++ b/vercel.json
@@ -6,8 +6,8 @@
     },
     "routes": [
         {
-            "src": "/assets/(.*)",
-            "dest": "/public/build/assets/"
+            "src": "/(css|js)/(.*)$",
+            "dest": "/api/index.php"
         },
         {
             "src": "/(.*)",
