--- a/vercel.json
+++ b/vercel.json
@@ -1,19 +1,25 @@
 {
     "version": 2,
-      "framework": null,
+    "framework": null,
     "functions": {
-        "api/index.php": { "runtime": "vercel-php@0.6.0" }
+        "api/index.php": {
+            "runtime": "vercel-php@0.7.0"
+        }
     },
     "routes": [
         {
-            "src": "/(css|js)/(.*)$",
-            "dest": "/api/index.php"
+            "src": "/(favicon\\.ico|robots\\.txt)",
+            "dest": "/public/$1"
+        },
+        {
+            "src": "/build/(.*)",
+            "dest": "/public/build/$1"
         },
         {
             "src": "/(.*)",
             "dest": "/api/index.php"
         }
-        ],
+    ],
     "env": {
         "APP_ENV": "production",
         "APP_DEBUG": "true",
